--- a/app/src/main/res/layout/fragment_tweet.xml
+++ b/app/src/main/res/layout/fragment_tweet.xml
@@ -35,15 +35,15 @@
             android:layout_below="@+id/tweet"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:gravity="top|start"
             android:hint="@string/message_text"
             android:inputType=""
             android:maxLength="140"
             android:textSize="18sp"
-            android:textStyle="italic">
-
-        </EditText>
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/tweetDate"
