--- a/app/src/main/res/layout/list_item_tweet.xml
+++ b/app/src/main/res/layout/list_item_tweet.xml
@@ -19,13 +19,28 @@
         android:src="@drawable/twitter"
         tools:ignore="HardcodedText" />
 
+
+    <TextView
+        android:id="@+id/tweeter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
+        android:fontFamily="cursive"
+        android:text="Tweeted by: Gary Fleming"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/timeline_item_tweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="cursive"
-        android:layout_alignStart="@+id/timeline_item_dateTextView"
         android:paddingEnd="8dp"
         android:paddingStart="8dp"
         android:textColor="@color/blackText"
@@ -36,12 +51,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/timeline_item_tweet"
-        android:layout_marginStart="26dp"
         android:layout_toEndOf="@+id/RowImage"
+        android:layout_marginStart="10dp"
         android:fontFamily="cursive"
         android:paddingEnd="4dp"
         android:paddingStart="16dp"
         android:paddingTop="8dp" />
 
 </RelativeLayout>
-
